apps/base/ramblefeed/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 3200
      targetPort: 3200
  type: ClusterIP
